feat: 서울 공공 와이파이 위치 검색 기능 추가 - 위치 정보 입력 및 근처 와이파이 조회 기능 구현
- 사용자가 자신의 위치를 입력할 수 있는 UI 추가
- 입력된 위치를 기반으로 근처의 공공 와이파이 정보를 조회하는 기능 추가
- 위치 검색 기록을 데이터베이스에 저장하는 기능 구현
- OpenAPI를 통해 공공 와이파이 정보를 불러오는 서블릿 추가

--- a/pom.xml
+++ b/pom.xml
@@ -59,13 +59,12 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--Sqlite 연결을 위해서 sqlite-jdbc 이용-->
+        <!--Mariadb 처리를 위해서 mariadb-java-client 이용-->
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.36.0.3</version>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.4.1</version>
         </dependency>
-
     </dependencies>
 
     <build>
